@@ -86,7 +86,7 @@ implements IFSFileImpl
     {
       return ((Boolean)connection_.callMethod(pxId_, "copyTo",
                                               new Class[] { String.class, Boolean.TYPE },
-                                              new Object[] { path, new Boolean(replace) }).getReturnValue()).booleanValue();
+                                              new Object[] { path, Boolean.valueOf(replace) }).getReturnValue()).booleanValue();
     }
     catch (InvocationTargetException e)
     {
@@ -177,7 +177,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "getAvailableSpace",
                               new Class[] { Boolean.TYPE },
-                              new Object[] { new Boolean(forUserOnly) })
+                              new Object[] { Boolean.valueOf(forUserOnly) })
         .getReturnValueLong();
     }
     catch (InvocationTargetException e) {
@@ -191,7 +191,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "getTotalSpace",
                               new Class[] { Boolean.TYPE },
-                              new Object[] { new Boolean(forUserOnly) })
+                              new Object[] { Boolean.valueOf(forUserOnly) })
         .getReturnValueLong();
     }
     catch (InvocationTargetException e) {
@@ -470,7 +470,7 @@ implements IFSFileImpl
     try {
       return (IFSCachedAttributes[]) connection_.callMethod (pxId_, "listDirectoryDetails",
                               new Class[] { String.class, String.class, Integer.TYPE, byte[].class, Boolean.TYPE },
-                              new Object[] { directoryPattern, directoryPath, new Integer(maxGetCount), restartID, new Boolean(allowSortedRequests) })//@D7C
+                              new Object[] { directoryPattern, directoryPath, new Integer(maxGetCount), restartID, Boolean.valueOf(allowSortedRequests) })//@D7C
         .getReturnValue();
     }
     catch (InvocationTargetException e) {
@@ -564,7 +564,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setAccess",
                                      new Class[] { Integer.TYPE, Boolean.TYPE, Boolean.TYPE },
-                                     new Object[] { new Integer(accessType), new Boolean(enableAccess), new Boolean(ownerOnly) })
+                                     new Object[] { new Integer(accessType), Boolean.valueOf(enableAccess), Boolean.valueOf(ownerOnly) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -609,7 +609,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setHidden",
                                      new Class[] { Boolean.TYPE },
-                                     new Object[] { new Boolean(attribute) })
+                                     new Object[] { Boolean.valueOf(attribute) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -665,7 +665,7 @@ implements IFSFileImpl
     try {
       return connection_.callMethod (pxId_, "setReadOnly",
                                      new Class[] { Boolean.TYPE },
-                                     new Object[] { new Boolean(attribute) })
+                                     new Object[] { Boolean.valueOf(attribute) })
         .getReturnValueBoolean();
     }
     catch (InvocationTargetException e) {
@@ -696,7 +696,7 @@ implements IFSFileImpl
     try {
       connection_.callMethod (pxId_, "setSorted",
                               new Class[] { Boolean.TYPE },
-                              new Object[] { new Boolean(sort) });
+                              new Object[] { Boolean.valueOf(sort) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow (e);
