@@ -912,16 +912,16 @@ until a <i>load()</i> is done.
 public void setKeyed (boolean keyed)
     throws PropertyVetoException
 {
-    Boolean old = new Boolean(getKeyed());
+    Boolean old = Boolean.valueOf(getKeyed());
 
     // Fire a vetoable change event.
-    fireVetoableChange("keyed", old, new Boolean(keyed));
+    fireVetoableChange("keyed", old, Boolean.valueOf(keyed));
 
     // Make property change.
     tableData_.setKeyed(keyed);
 
     // Fire the property change event.
-    firePropertyChange("keyed", old, new Boolean(keyed));
+    firePropertyChange("keyed", old, Boolean.valueOf(keyed));
 }
 
 
